# orc

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: linux.yml  windows.yml
OrcMain/: CMakeLists.txt
OrcMain/include/: Orc.h  OrcApplicationContext.h  OrcDefines.h  OrcException.h  OrcGraphicsDevice.h  OrcPlatform.h  OrcRoot.h  OrcStdHeaders.h  OrcTypes.h
OrcMain/src/: OrcApplicationContext.cpp  OrcD3D12GraphicsDevice.cpp  OrcD3D12GraphicsDevice.h  OrcD3D12Prerequisites.h  OrcRoot.cpp
Samples/: CMakeLists.txt
Samples/Window/: Window.cpp
